--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ clap = { version = "4.5.37", features = ["derive"] }
 reqwest = { version = "0.12.19", features = ["stream", "gzip", "json"] }
 flate2 = "1.1.1"
 zip = "2.2.0"
+rand = "0.8"
 
 [profile.release]
 strip = true
